Fixing nowrap.

--- a/x-platform/public/dm-plugins/slide-workspace/editor/tabs/sw-editor-tabs.less
+++ b/x-platform/public/dm-plugins/slide-workspace/editor/tabs/sw-editor-tabs.less
@@ -111,6 +111,7 @@
 	    max-width: 65%;
 	    overflow: hidden;
 	    text-overflow: ellipsis;
+      white-space: nowrap;
 		}
 
 		li .tree-selected {
